--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -31,9 +31,21 @@
         </dependency>
         <dependency>
             <groupId>com.feng</groupId>
+            <artifactId>dubbo-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.feng</groupId>
             <artifactId>dubbo-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
+        <!--        <dependency>-->
+<!--            <groupId>com.feng</groupId>-->
+<!--            <artifactId>dubbo-api</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
