--- a/dubbo-consumer/src/main/webapp/WEB-INF/web.xml
+++ b/dubbo-consumer/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,17 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
-  <!-- 配置spring-->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:applicationContext.xml</param-value>
-  </context-param>
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-  </listener>
+<!--  &lt;!&ndash; 配置spring&ndash;&gt;-->
+<!--  <context-param>-->
+<!--    <param-name>contextConfigLocation</param-name>-->
+<!--    <param-value>classpath:applicationContext.xml</param-value>-->
+<!--  </context-param>-->
+<!--  <listener>-->
+<!--    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+<!--  </listener>-->
+<!--  <listener>-->
+<!--    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>-->
+<!--  </listener>-->
 
 
   <!-- 配置springmvc-->
