--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
         <jstl.version>1.2</jstl.version>
         <taglibs.version>1.1.2</taglibs.version>
         <c3p0.version>0.9.5.2</c3p0.version>
-        <mysql.version>5.1.35</mysql.version>
+        <mysql.version>8.0.16</mysql.version>
+        <druid.version>1.0.9</druid.version>
     </properties>
 
     <dependencies>
@@ -153,6 +154,12 @@
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>${c3p0.version}</version>
+        </dependency>
+        <!-- 连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- start..............dubbo.................-->
