--- a/dubbo-provider/src/main/resources/jdbc.properties
+++ b/dubbo-provider/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/dubbo?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=123456
+jdbc.driver = com.mysql.cj.jdbc.Driver
+jdbc.url = jdbc:mysql://162.14.77.50:3306/atguigudb?serverTimezone=UTC
+jdbc.username = root
+jdbc.password = qwe123
